--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "expo-av": "~16.0.7",
     "expo-checkbox": "~5.0.7",
     "expo-font": "~14.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
-    "firebase": "^12.3.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "firebase": "^12.4.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-native": "^0.81.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.1"
   },
   "private": true
 }
