--- a/package.json
+++ b/package.json
@@ -21,27 +21,19 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "cloudinary": "^2.7.0",
-    "expo": "~54.0.1",
+    "expo": "54.0.19",
     "expo-av": "~16.0.7",
     "expo-checkbox": "~5.0.7",
     "expo-font": "~14.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
-<<<<<<< HEAD
     "firebase": "^12.4.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "^0.81.4",
-    "react-native-gesture-handler": "^2.28.0",
-    "react-native-reanimated": "~4.1.1",
-=======
-    "firebase": "^12.3.0",
-    "navigation": "^6.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
->>>>>>> 9b4188aa5348e7303bfa05ef147a9ee905a1170b
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.1"
