--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.22.0",
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
-    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.5.1",
     "@react-navigation/stack": "^7.4.8",
     "cloudinary": "^2.7.0",
-    "expo": "54.0.19",
+    "expo": "^54.0.20",
     "expo-av": "~16.0.7",
     "expo-checkbox": "~5.0.7",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
@@ -32,11 +33,15 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.1"
+    "react-native-web": "^0.21.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native/metro-config": "^0.82.1"
+  }
 }
